; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_dispmanx_gfx.c_dispmanx_set_texture_enable.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_dispmanx_gfx.c_dispmanx_set_texture_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dispmanx_video = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @dispmanx_set_texture_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dispmanx_set_texture_enable(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.dispmanx_video*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.dispmanx_video*
  store %struct.dispmanx_video* %9, %struct.dispmanx_video** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %22, label %12

12:                                               ; preds = %3
  %13 = load %struct.dispmanx_video*, %struct.dispmanx_video** %7, align 8
  %14 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %12
  %18 = load %struct.dispmanx_video*, %struct.dispmanx_video** %7, align 8
  %19 = load %struct.dispmanx_video*, %struct.dispmanx_video** %7, align 8
  %20 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %19, i32 0, i32 1
  %21 = call i32 @dispmanx_surface_free(%struct.dispmanx_video* %18, i32* %20)
  br label %22

22:                                               ; preds = %17, %12, %3
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.dispmanx_video*, %struct.dispmanx_video** %7, align 8
  %25 = getelementptr inbounds %struct.dispmanx_video, %struct.dispmanx_video* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  ret void
}

declare dso_local i32 @dispmanx_surface_free(%struct.dispmanx_video*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
